# obsvr-sdk

./: .gitignore  BENCHMARKS.md  CODEOWNERS  CODE_OF_CONDUCT.md  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
action/: README.md  action.yml
bench/: README.md  run-all.sh
bench/python/: bench_lib.py  overhead.py  stress.py
bench/ts/: lib.mjs  overhead.mjs  stress.mjs
conformance/: known-divergences.md
conformance/fixtures/: canary.json  decision_input.json  deobfuscation.json  effective_policy.json  eval_semantics.json  external_backend.json  normalization.json  otel_attributes.json  pii_scan.json  policy_floor.json  quota_escrow.json  reason_codes.json  rules_hash.json  session_taint.json  signing_vectors.json  tool_pinning.json
scripts/: check-version-consistency.mjs
sdk/: .npmignore  LICENSE  NOTICE  README.md  eslint.config.mjs  jest.config.js  jest.stress.config.js  package-lock.json  package.json  tsconfig.json
sdk-python/: NOTICE  README.md  pyproject.toml
sdk-python/obsvr/: __init__.py  _version.py  agent_run.py  auto.py  canary.py  config.py  decision_record.py  deobfuscate.py  escrow.py  events.py  external_backend.py  injection_session.py  normalize.py  otel_mirror.py  pii_types.py  policy.py  policy_log.py  presidio.py  reason_codes.py  register.py  remote.py  response_scan.py  rules.py  safe_regex.py  sender.py  session_taint.py  span.py  span_attributes.py  ssrf.py  tool_pinning.py  wrap.py
sdk-python/obsvr/integrations/: __init__.py  adk.py  agent_framework.py  autogen.py  bedrock.py  crewai.py  fastapi.py  haystack.py  langchain.py  llamaindex.py  mcp.py  openai_agents.py  pydantic_ai.py  semantic_kernel.py  smolagents.py  vertex.py
sdk-python/tests/: conftest.py  test_adk.py  test_agent_framework.py  test_agent_run.py  test_approval_pinning.py  test_auto.py  test_bedrock.py  test_canary_conformance.py  test_canary_wiring.py  test_config_https.py  test_conformance.py  test_decision_record.py  test_deobfuscation_conformance.py  test_deobfuscation_review_fixes.py  test_deobfuscation_wiring.py  test_escrow_conformance.py  test_events.py  test_external_backend.py  test_external_backend_conformance.py  test_fail_mode.py  test_fastapi.py  test_haystack.py  test_integrations.py  test_langchain_retrieval_spans.py  test_mcp.py  test_mcp_response_scan.py  test_normalization.py  test_otel_parity.py  test_package_meta.py  test_parity_features.py  test_pii_parity.py  test_pii_scan_conformance.py  test_pii_types.py  test_policy.py  test_policy_floor_conformance.py  test_policy_floor_review_fixes.py  test_policy_floor_wiring.py  test_policy_log.py  test_policy_timeout.py  test_post_call.py  (+21 more)
sdk/src/: azure-openai.ts  bedrock.ts  cli-verify.ts  client.ts  cloudflare.ts  constants.ts  index.ts  langchain.ts  llamaindex.ts  mcp.ts  openai-agents.ts  register.ts  rego-export-bin.ts  together.ts  types.ts  vercel-ai.ts  vertex.ts
sdk/src/auto/: index.ts  loader-hooks.ts
(+154 files in other folders)
