[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "obsvr-sdk"
dynamic = ["version"]  # single source: obsvr/_version.py
description = "obsvr LLM audit SDK for Python — fire-and-forget signed audit events with built-in PII policy, deterministic rule enforcement, and framework auto-instrumentation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "obsvr" }]
keywords = [
    "llm", "audit", "governance", "compliance", "observability",
    "pii", "ai-governance", "openai", "anthropic", "langchain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/obsvr-dev/obsvr-sdk"
Repository = "https://github.com/obsvr-dev/obsvr-sdk"
Issues = "https://github.com/obsvr-dev/obsvr-sdk/issues"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
crewai = ["crewai>=0.30.0"]
autogen = ["pyautogen>=0.2.0"]
fastapi = ["starlette>=0.30.0"]
otel = ["opentelemetry-api>=1.20.0"]
bedrock = ["boto3>=1.34.0"]
vertex = ["google-cloud-aiplatform>=1.38.0"]
adk = ["google-adk>=0.1.0"]
pydantic-ai = ["pydantic-ai-slim>=0.0.14"]
haystack = ["haystack-ai>=2.0.0"]
smolagents = ["smolagents>=1.0.0"]
agent-framework = ["agent-framework>=0.1.0"]
semantic-kernel = ["semantic-kernel>=1.0.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.dynamic]
version = { attr = "obsvr._version.__version__" }

[tool.setuptools.packages.find]
include = ["obsvr*"]

[tool.setuptools.package-data]
obsvr = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Minimal, correctness-only lint: ruff's default E (pycodestyle errors)
# and F (pyflakes) rule set. Deliberately not a style linter.
[tool.ruff]
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# Deliberate mid-file imports (documented in-source: cycle avoidance and
# single-sourcing of the wire version); not import-order accidents.
"obsvr/policy.py" = ["E402", "F841"]
"obsvr/remote.py" = ["E402"]
"obsvr/rules.py" = ["E402"]
# Tests import symbols for fixtures/monkeypatching and keep illustrative
# locals; correctness gating there adds noise, not safety.
"tests/*" = ["E402", "E731", "F401", "F841"]
